// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSumary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    2,350 $
  </h1>
</div>
`;

exports[`should render ExpenseSumary with one expense or more 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    10,250 $
  </h1>
</div>
`;
